--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -15,9 +15,12 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.523.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
+    "recharts": "^3.0.0",
     "semver": "^7.7.2"
   },
   "devDependencies": {
