--- a/API/.env
+++ b/API/.env
@@ -1,8 +1,8 @@
 DB_HOST=127.0.0.1
 DB_USER=root
-DB_PASSWORD=root
-DB_NAME=progra4
-PORT=3306
-MAIL_USER=authenticationemailp4@gmail.com      # correo emisor
-MAIL_PASS=Programacion4       # contraseña generada desde Gmail
+DB_PASSWORD=locapzo10
+DB_NAME=p4_project
+PORT=3000
+MAIL_USER=authenticationemailp4@gmail.com
+MAIL_PASS=Programacion4
 JWT_SECRET=secretrefresher
