--- a/API/.env
+++ b/API/.env
@@ -1,6 +1,6 @@
 DB_HOST=127.0.0.1
 DB_USER=root
-DB_PASSWORD=locapzo10
+DB_PASSWORD=1234
 DB_NAME=p4_project
 PORT=3000
 MAIL_USER=authenticationemailp4@gmail.com
