--- a/API/.env
+++ b/API/.env
@@ -1,8 +1,5 @@
-DB_HOST=127.0.0.1
+DB_HOST=mysql.railway.internal
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=1234
-DB_NAME=p4_project
-PORT=3000
-MAIL_USER=authenticationemailp4@gmail.com
-MAIL_PASS=Programacion4
-JWT_SECRET=secretrefresher
+DB_PASSWORD=xYTCLnCRRObbbMZOBoDnqwpuinhWdoQY
+DB_NAME=railway
