--- a/API/.env
+++ b/API/.env
@@ -3,3 +3,8 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=xYTCLnCRRObbbMZOBoDnqwpuinhWdoQY
 DB_NAME=railway
+PORT=3000
+MAIL_USER=authenticationemailp4@gmail.com
+MAIL_PASS=Programacion4
+JWT_SECRET=secretrefresher
+
